--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "op-api-forwarder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.5"
+    "@types/express": "^4.17.21",
+    "axios": "^1.6.5",
+    "express": "^4.18.2",
+    "typescript": "^5.3.3"
   }
 }
