--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "op-api-forwarder",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
