--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "op-api-forwarder",
-  "version": "1.0.8",
+  "name": "op-express-forwarder",
+  "version": "1.0.9",
   "description": "",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
     "axios": "^1.6.5",
-    "express": "^4.18.2",
     "typescript": "^5.3.3"
   }
 }
